View width fix
- Minor view width fix for overflowing containers

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -40,7 +40,7 @@
 
 /* Navbar */
     .nav-container{
-        width: 100vw;
+        /* width: 100vw; */
         display: grid;
         grid-template-columns: 66% auto;
     }
@@ -81,6 +81,7 @@
         align-items: center;
         background-color: var(--teal-color);
         padding: 1em 4em 1em 1em;
+        overflow-x: hidden;
     }
 
     .social-header ul{
@@ -104,7 +105,7 @@
 
 /* Hero */
     .hero{
-        width: 100vw;
+        /* width: 100vw; */
         background: var(--teal-color);
         display: grid;
         grid-template-columns: 66% auto;
