--- a/styles/tablet.css
+++ b/styles/tablet.css
@@ -40,7 +40,7 @@
 
 /* Navbar */
     .nav-container{
-        width: 100vw;
+        /* width: 100vw; */
         display: grid;
         grid-template-columns: 66% auto;
     }
